Fixing CSS alignments on replay's page. (#7)

--- a/static/css/replay.less
+++ b/static/css/replay.less
@@ -143,27 +143,30 @@ body.letter-space-please .cover h2 {
             }
         }
 
-        .titre-and-summary .category-icon {
-            float: left;
+        .category-icon {
             display: inline-block;
             width: 50px;
             height: 42px;
             background-position: center center;
             background-repeat: no-repeat;
             opacity: 0.5;
+            vertical-align: bottom;
+            position: relative;
+            left: 1px;
+            top: -1px;
+        }
+
+        .titre-and-summary {
+            margin-left: 5px;
+        }
+
+        .category-icon + .titre-and-summary {
+            margin-left: 0px;
         }
 
         .titre-and-summary .titre, .titre-and-summary .summary {
             width: auto;
             min-width: 400px;
-            margin-left: 5px;
-        }
-
-        .titre-and-summary .category-icon + .titre {
-            margin-left: 50px;
-        }
-        .titre-and-summary .category-icon + .titre + .summary {
-            margin-left: 0px;
         }
 
         p {
